# SparkStructOrganization

./: .gitignore  pyproject.toml  requirements.txt
spark_connection/: concurrent_coin_spark.py  properties.py  streaming_connection.py
spark_connection/.checkpoint_table_BTC/: .metadata.crc  metadata
spark_connection/.checkpoint_table_BTC/offsets/: .0.crc  .1.crc  0  1
spark_connection/.checkpoint_table_BTC/sources/0/: .0.crc  0
spark_connection/.checkpoint_table_ETH/: .metadata.crc  metadata
spark_connection/.checkpoint_table_ETH/offsets/: .0.crc  .1.crc  0  1
spark_connection/.checkpoint_table_ETH/sources/0/: .0.crc  0
spark_connection/config/: properties.py
spark_connection/schema/: abstruct_class.py  congestion_query.py  data_constructure.py  topic_list.py  udf_util.py
spark_connection/util/: urls.conf
