[tool.poetry]
name = "sparkstructorganization"
version = "0.1.0"
description = ""
authors = ["skip"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
requests = "^2.31.0"
pandas = "^2.2.0"
numpy = "^1.26.4"
scikit-learn = "^1.4.0"
pyspark = "3.5.0"
confluent-kafka = "^2.3.0"
pydantic = "^2.6.1"
websocket = "^0.2.1"
websocket-client = "^1.7.0"
aiokafka = "^0.10.0"
jinja2 = "^3.1.3"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
